# meeting-min-intellisoins

./: IMPLEMENTATION_GUIDE_PHASES_2-4.md  MOBILE_ARCHITECTURE.md  MOBILE_MIGRATION_PLAN.md  MOBILE_MIGRATION_PLAN_V2.md  MOBILE_WHISPER_LOCAL_STRATEGY.md  PULL_REQUEST_TEMPLATE.md  package.json
.github/: GITHUB_ACTIONS_GUIDE.md
.github/workflows/: build-tauri.yml
apps/desktop/: I18N_PRIORITY_FILES.md  package.json
apps/desktop/src/: i18n.ts
apps/desktop/src/app/: layout.tsx
apps/desktop/src/components/: DeviceSelection.tsx  EmptyStateSummary.tsx  LanguageSelection.tsx  LanguageSwitcher.tsx  ModelSettingsModal.tsx  PermissionWarning.tsx  PreferenceSettings.tsx  RecordingControls.tsx  RecordingSettings.tsx  TranscriptSettings.tsx
apps/desktop/src/contexts/: LocaleContext.tsx
apps/mobile/: IOS_SETUP.md  README.md  index.html  package.json  run-ios.sh  vite.config.ts
apps/mobile/src/: App.tsx  styles.css
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/src/: lib.rs  recording_state.rs
apps/mobile/src-tauri/src/audio/: buffer.rs  mobile.rs  mod.rs
apps/mobile/src-tauri/src/whisper_engine/: mobile.rs  mod.rs
apps/mobile/src/screens/: RecordingScreen.tsx  SetupScreen.tsx
frontend/: I18N_ASSESSMENT.md  package.json
frontend/messages/: en.json  fr.json
frontend/src/app/: page.tsx
frontend/src/components/: About.tsx  Info.tsx  SummaryModelSettings.tsx
frontend/src/components/AISummary/: index.tsx
frontend/src/components/MeetingDetails/: SummaryGeneratorButtonGroup.tsx  TranscriptButtonGroup.tsx  TranscriptPanel.tsx
(+3 files in other folders)
