[package]
name = "meetily-mobile"
version = "0.1.0"
description = "Meetily Mobile - Privacy-first meeting assistant for iOS and Android"
authors = ["IntelliSoins"]
edition = "2021"

[lib]
name = "meetily_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"

# Audio processing
cpal = "0.15"

# Whisper for local transcription
whisper-rs = { version = "0.13.2", features = ["raw-api"] }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api", "metal"] }

[target.'cfg(target_os = "android")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Core ML for iOS (optional, requires extra build steps)
coreml = []
